--- a/custom_sale_dashboard/static/src/components/sales_dashboard.scss
+++ b/custom_sale_dashboard/static/src/components/sales_dashboard.scss
@@ -1,6 +1,13 @@
+::after,::before,:root {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 .card-container {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 1rem;
 }
